# CompDaF

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RaftlibServer  samplefitsout.txt
protobufs/cpp/: animation.pb.cc  catalog_file_info.pb.cc  catalog_filter.pb.cc  catalog_filter.pb.h  catalog_list.pb.cc  catalog_list.pb.h  close_file.pb.h  concat_stokes_files.pb.cc  enums.pb.cc  enums.pb.h  error.pb.cc  file_info.pb.h  file_list.pb.cc  file_list.pb.h  import_region.pb.h  open_catalog_file.pb.cc  open_catalog_file.pb.h  open_file.pb.h  region.pb.cc  region.pb.h  region_file_info.pb.cc  region_histogram.pb.cc  region_histogram.pb.h  region_list.pb.cc  region_list.pb.h  region_requirements.pb.h  region_stats.pb.h  register_viewer.pb.cc  register_viewer.pb.h  save_file.pb.cc  scripting.pb.h  set_image_channels.pb.cc  set_image_channels.pb.h  spatial_profile.pb.h  spectral_line_request.pb.h  spectral_profile.pb.cc  spectral_profile.pb.h  stop_moment_calc.pb.cc
src/: main.py  mainServer.py  runClient.py  runDaliugeServer.py
src/backend/: AddVector.h  AddVector.hpp  AddVector.tcc  Daliuge.py  DaliugeServer.py  FitsReader.cpp  FitsReader.h  MergeBins.h  MergeBins.tcc  RaftHistogram.h  RaftHistogram.tcc  RaftReadImage.h  RaftReadImage.tcc  RaftStatistics.h  RaftStatistics.tcc  Raftlib.cpp  Raftlib.h  Raftlib.tcc  RaftlibServer.cpp  Reader.cpp  Reader.h  Session.cpp  Session.h  SplitVector.h  SplitVector.hpp  SplitVector.tcc  StdvVector.h  StdvVector.tcc  Sum.cpp  Sum.h  Sum.hpp  Sum.tcc  UnitTests.cpp  daliuge.py  raftdataflow.cpp  raftlib.cpp
src/daliuge-backend/: Daliuge.py  DaliugeServer.py  GraphLoader.py
src/daliuge_backend/: Daliuge.py  DaliugeServer.py  GraphLoader.py
src/frontend/: Client.py  client.py
src/graphs/: dist4_lb100.graph  dist4_lb50.graph  local-4-4.graph  local-6-6.graph  local-8-8.graph  local10-10.graph  local12-12.graph  local14-14.graph  local16-16.graph  local4-4.graph  local4split.graph  local8-8.graph  local8split.graph
src/protobufs/cpp/: animation.pb.h  catalog_file_info.pb.h  close_file.pb.cc  concat_stokes_files.pb.h  contour.pb.cc  contour.pb.h  contour_image.pb.cc  contour_image.pb.h  defs.pb.cc  defs.pb.h  error.pb.h  export_region.pb.cc  export_region.pb.h  file_info.pb.cc  import_region.pb.cc  moment_request.pb.cc  moment_request.pb.h  open_file.pb.cc  raster_tile.pb.cc  raster_tile.pb.h  region_file_info.pb.h  region_requirements.pb.cc  region_stats.pb.cc  resume_session.pb.cc  resume_session.pb.h  save_file.pb.h  scripting.pb.cc  set_cursor.pb.cc  set_cursor.pb.h  spatial_profile.pb.cc  spectral_line_request.pb.cc  stop_moment_calc.pb.h  tiles.pb.cc  tiles.pb.h
src/protobufs/python/: animation_pb2.py  catalog_file_info_pb2.py  (+29 more)
src/raft-backend/: EventHeader.h  FitsReader.cpp  FitsReader.h  MergeBins.tcc  RaftHistogram.tcc  RaftReadImage.h  RaftReadImage.tcc  RaftReadingRow.h  RaftReadingRow.tcc  RaftStatistics.h  RaftStatistics.tcc  Raftlib.h  Raftlib.tcc  RaftlibServer.cpp  Session.cpp  Session.h  SplitVector.h  SplitVector.tcc  Sum.h  Sum.tcc  UnitTests.cpp
src/util/: message_header.py  message_provider.py
uWebSockets/examples/: HelloWorld.cpp
